<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/dark">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/img_photo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorPrimary"/>

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/img_photo"
        android:text="@string/name"
        android:textColor="@color/whiteGrey"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:layout_toEndOf="@id/img_photo"
        android:layout_below="@id/txt_name"
        android:text="@string/username"
        android:textColor="@color/whiteGrey1"/>

    <TextView
        android:id="@+id/txt_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@id/img_photo"
        android:layout_below="@id/txt_username"
        android:text="@string/unique"
        android:textColor="@color/whiteGrey1"
        android:maxLines="2"/>


</RelativeLayout>