<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_photo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="25dp"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_photo"
                android:layout_marginTop="20dp"
                android:text="@string/name"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/whiteGrey"/>

            <TextView
                android:id="@+id/txt_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_name"
                android:text="@string/username"
                android:textSize="20sp"
                android:textColor="@color/whiteGrey1"/>

            <ImageView
                android:id="@+id/followerfollowing"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_below="@id/txt_username"
                android:layout_marginTop="11dp"
                android:src="@drawable/followerfollowing_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_number_of_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="9dp"
                android:layout_toEndOf="@id/followerfollowing"
                android:layout_below="@id/txt_username"
                android:text="@string/unique"
                android:textColor="@color/whiteGrey" />

            <TextView
                android:id="@+id/follower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="9dp"
                android:layout_toEndOf="@id/txt_number_of_followers"
                android:layout_below="@id/txt_username"
                android:text="@string/followers"
                android:textColor="@color/whiteGrey" />

            <TextView
                android:id="@+id/txt_number_of_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="9dp"
                android:layout_toEndOf="@id/follower"
                android:layout_below="@id/txt_username"
                android:text="@string/unique"
                android:textColor="@color/whiteGrey" />

            <TextView
                android:id="@+id/following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="9dp"
                android:layout_toEndOf="@id/txt_number_of_following"
                android:layout_below="@id/txt_username"
                android:text="@string/following"
                android:textColor="@color/whiteGrey" />

            <ImageView
                android:id="@+id/star"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@+id/following"
                android:layout_below="@id/txt_username"
                android:layout_marginTop="11dp"
                android:scaleType="fitXY"
                android:src="@drawable/star_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_number_of_repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="9dp"
                android:layout_toEndOf="@id/star"
                android:layout_below="@id/txt_username"
                android:text="@string/unique"
                android:textColor="@color/whiteGrey" />

            <ImageView
                android:id="@+id/company"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_below="@id/followerfollowing"
                android:layout_marginTop="8dp"
                android:src="@drawable/company_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/followerfollowing"
                android:layout_toEndOf="@id/company"
                android:layout_marginTop="5dp"
                android:layout_marginStart="3dp"
                android:text="@string/unique"
                android:textColor="@color/whiteGrey"/>

            <ImageView
                android:id="@+id/location"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/company"
                android:src="@drawable/location_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/company"
                android:layout_toEndOf="@id/location"
                android:layout_marginTop="5dp"
                android:layout_marginStart="3dp"
                android:text="@string/unique"
                android:textColor="@color/whiteGrey"/>

            <HorizontalScrollView
                android:id="@+id/hs1"
                android:layout_below="@id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <RelativeLayout
                    android:id="@+id/rl1"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="@color/dark2">

                    <ImageView
                        android:id="@+id/overviewIcon"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/overview_icon"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/overviewIcon"
                        android:text="@string/overview"
                        android:textColor="@color/whiteGrey"/>

                    <ImageView
                        android:id="@+id/repository_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_toEndOf="@id/overview"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/repositories_icon"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/repository"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/repository_icon"
                        android:layout_centerVertical="true"
                        android:text="@string/repositories"
                        android:textColor="@color/whiteGrey"/>

                    <TextView
                        android:id="@+id/txt_number_of_repository1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/repository"
                        android:text="@string/unique"
                        android:textColor="@color/whiteGrey"/>

                    <ImageView
                        android:id="@+id/projectIcon"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_toEndOf="@id/txt_number_of_repository1"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/projects_icon"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/project"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/projectIcon"
                        android:textColor="@color/whiteGrey"
                        android:text="@string/projects"/>

                    <ImageView
                        android:id="@+id/packageIcon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_toEndOf="@id/project"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/packages_icon"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/packageIcon"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="20dp"
                        android:text="@string/packages"
                        android:textColor="@color/whiteGrey"/>
                </RelativeLayout>
            </HorizontalScrollView>

            <RelativeLayout
                android:id="@+id/rl_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/hs1"
                android:layout_marginTop="15dp"
                android:background="@color/dark2"
                android:padding="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/githubicon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/github_icon"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/githubicon"
                    android:layout_centerHorizontal="true"
                    android:text="@string/create_your_github"
                    android:textColor="@color/whiteGrey"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/createdes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/create"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/create_your_github1"
                    android:textAlignment="center"
                    android:textColor="@color/whiteGrey"/>

                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="75dp"
                    android:layout_height="30dp"
                    android:layout_below="@id/createdes"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="#25833f"
                    android:text="@string/signup"
                    android:textColor="@color/whiteGrey"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_create"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:background="@color/colorAccent">

                <TextView
                    android:id="@+id/neww"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/neww"
                    android:textColor="@color/green1"/>

                <TextView
                    android:id="@+id/neww1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/neww"
                    android:text="@string/neww1"
                    android:textSize="20sp"
                    android:textColor="@color/whiteGrey"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/neww2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/neww1"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/neww2"
                    android:textColor="@color/whiteGrey"
                    android:textAlignment="center"/>

                <Button
                    android:id="@+id/btn_signup2"
                    android:layout_width="140dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/neww2"
                    android:layout_centerHorizontal="true"
                    android:background="#0d5cbb"
                    android:text="@string/neww4"
                    android:textStyle="bold"
                    android:textColor="@color/whiteGrey"/>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/githubicon_bottom"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/github_icon" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/githubicon_bottom"
                android:layout_marginStart="10dp"
                android:text="@string/github_inc"
                android:textColor="@color/whiteGrey1"
                android:textSize="13sp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>